src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-57611-trait-alias.rs:8:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:20:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &X` must implement `FnOnce<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 X,)>`, for some specific lifetime `'2`

error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:20:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'r> Fn<(&'r X,)>`
              found type `Fn<(&'<empty> X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:28:9
   |
LL |         |x| x
   |         ^^^^^

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:20:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &'2 X` must implement `FnOnce<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 X,)>`, for some specific lifetime `'2`

error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:20:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected type `for<'r> Fn<(&'r X,)>`
              found type `Fn<(&'<empty> X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:28:9
   |
LL |         |x| x
   |         ^^^^^

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:20:16
   |
LL |     type Bar = impl Baz<Self, Self>;
   |                ^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &'2 X` must implement `FnOnce<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 X,)>`, for some specific lifetime `'2`

error: aborting due to 5 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
